--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=14.18.0"
   },
   "scripts": {
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview",
     "fmt": "prettier --write '**/*.{vue,js,json,css,scss,md}'",
